--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header>
+  <header class="index-header">
     <div class="header-nav container">
-      <img class="index-logo" src="img/logo.png" alt="nerds">
+      <img class="index-logo" src="img/index/logo.png" alt="nerds">
       <ul class="navigation">
         <li><a href="#">СТУДИЯ</a></li>
         <li><a href="#">КЛИЕНТЫ</a></li>
@@ -28,28 +28,28 @@
         <input type="radio" name="slide" value="">
         <input type="radio" name="slide" value="">
       </div>
-      <img class="slider-image" src="img/slider-1.png" alt="" height="231px" width="338px">
+        <img class="slider-image" src="img/index/slider-1.png" alt="" height="231px" width="338px">
     </div>
   </header>
 
   <main  class="container">
   <div class="index-products container">
     <div class="products-websites">
-      <img src="img/web-sites.png" alt="">
+        <img src="img/index/web-sites.png" alt="">
       <h3>ВЕБ-САЙТЫ</h3>
       <p>Мир никогда не будет прежним
          после того как увидит ваш сайт!</p>
          <a href="#">ЗАКАЗАТЬ</a>
     </div>
     <div class="products-apps">
-      <img src="img/apps.png" alt="">
+        <img src="img/index/apps.png" alt="">
       <h3>ПРИЛОЖЕНИЯ</h3>
       <p>Покорите топ-10 приложений
          в AppStore и Google Play</p>
          <a href="#">ЗАКАЗАТЬ</a>
     </div>
     <div class="products-present">
-      <img src="img/presents.png" alt="">
+        <img src="img/index/presents.png" alt="">
       <h3>ПРЕЗЕНТАЦИИ</h3>
       <p>Вы даже не подозреваете,
          насколько вы изумительны!</p>
@@ -84,9 +84,9 @@
   <hr>
 
   <div class="our-clients  container">
-    <a class="glukhanko" href="#"><img src="img/glukhanko.png" alt=""></a>
-    <a class="htmlAcademy" href="#"><img src="img/htmlAcademy.png" alt=""></a>
-    <a class="borodinski" href="#"><img src="img/borodinski.png" alt=""></a>
+      <a class="glukhanko" href="#"><img src="img/index/glukhanko.png" alt=""></a>
+      <a class="htmlAcademy" href="#"><img src="img/index/htmlAcademy.png" alt=""></a>
+      <a class="borodinski" href="#"><img src="img/index/borodinski.png" alt=""></a>
   </div>
 
     <hr>
