--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <div class="header-nav container">
       <img class="index-logo" src="img/index/logo.png" alt="nerds">
       <ul class="navigation">
-        <li><a href="#">СТУДИЯ</a></li>
+          <li><a   class="current" href="#">СТУДИЯ</a></li>
         <li><a href="#">КЛИЕНТЫ</a></li>
-        <li><a href="#">МАГАЗИН</a></li>
+        <li><a href="catalog.html">МАГАЗИН</a></li>
         <li><a href="#">КОНТАКТЫ</a></li>
       </ul>
-      <div class="cart">КОРЗИНА</div>
+      <a class="cart" href="#">КОРЗИНА</a>
     </div>
     <div class="header-slider container">
       <div class="leftside-slider">
